--- a/pages/package.json
+++ b/pages/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "comrade",
+  "name": "next-template",
   "version": "0.0.2",
   "private": true,
   "scripts": {
@@ -18,7 +18,7 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "lucide-react": "0.105.0-alpha.4",
-    "next": "^13.4.4",
+    "next": "13.4.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
