--- a/app/package.json
+++ b/app/package.json
@@ -14,9 +14,12 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@livekit/components-core": "^0.6.7",
+    "@livekit/components-react": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "livekit-server-sdk": "^1.2.1",
     "lucide-react": "0.105.0-alpha.4",
     "next": "^13.4.4",
     "next-themes": "^0.2.1",
@@ -24,7 +27,8 @@
     "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.12.0",
-    "tailwindcss-animate": "^1.0.5"
+    "tailwindcss-animate": "^1.0.5",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
@@ -34,7 +38,6 @@
     "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.41.0",
-    "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.12.0",
