--- a/demo/package.json
+++ b/demo/package.json
@@ -11,16 +11,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@livekit/components-core": "^0.6.7",
+    "@livekit/components-react": "^1.0.3",
+    "@livekit/components-styles": "^1.0.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-toast": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.0.5",
     "@types/protoo-client": "^4.0.1",
     "bowser": "^2.11.0",
-    "mediasoup-client": "^3.6.84",
-    "protoo-client": "^4.0.6",
+    "livekit-client": "^1.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
+    "swr": "^2.1.5",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
